Change text about use with the production API

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="toggle.css">
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css">
 
-    <link rel=“shortcut” href=“favicon.png” type=“image/png” />
+    <link rel=“shortcut icon” href=“favicon.png” type=“image/png” />
 </head>
 
 <body>
@@ -22,12 +22,8 @@
         <p>
             Hello! OAuth signin isn't ready yet, so to play with the transaction heatmap, you'll need to sign in at
             <a href="https://staging-developers.getmondo.co.uk/" target="_blank">https://staging-developers.getmondo.co.uk/</a>
-            (for staging) or
-            <a href="https://developers.getmondo.co.uk/" target="_blank">https://developers.getmondo.co.uk/</a> (for
-            real transactions), and paste your
-            <em>Sandbox Access Token</em> into the form field below. If you decide to view real transactions, make sure you change the API URL
-            from <code>https://staging-api.getmondo.co.uk</code> to
-            <code>https://api.getmondo.co.uk</code>.
+            (for staging) and paste your
+            <em>Sandbox Access Token</em> into the form field below. Remember that this isn't ready for public use yet!
         </p>
         <p>
             Credentials you enter here will be saved in your web browser's local storage, and sent to the Mondo servers
